--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -70,7 +70,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Exported Games/Dungeon Janitor/MacOS/DungeonJanitorMacV0.1.1.zip"
+export_path="../Exported Games/Dungeon Janitor/MacOS/DungeonJanitorMacV0.1.3.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -173,7 +173,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Exported Games/Dungeon Janitor/HTML5/DungeonJanitor.html"
+export_path="../Exported Games/Dungeon Janitor/HTML5/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
